k8s/55-challenge-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-proxy
  namespace: gzctf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenge-proxy
  template:
    metadata:
      labels:
        app: challenge-proxy
    spec:
      serviceAccountName: gzctf-challenge-proxy
      nodeSelector:
        kubernetes.io/hostname: gzctf-control
      tolerations:
        - key: CriticalAddonsOnly
          operator: Equal
          value: "true"
          effect: NoSchedule
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: watcher
          image: ghcr.io/endraanugrah12/gzctf-k8s-challenge-proxy:main
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 24Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
